@@ -23,11 +23,14 @@ PCSX-Reloaded Maintainer: Wei Mingzhi <whistler@openoffice.org>
 
 PCSX-Reloaded Contributors: avlex (Help on xcode project)
 			    dario86 (Various bugfixes)
+			    edgbla (Bugfix)
 			    Gabriele Gorla (Rewritten MDEC decoder)
-			    Giovanni Scafora (Italian Translation)
 			    maggix (Leopard compilation fix)
 			    NeToU (Bugfix)
 			    Peter Collingbourne (Various core/psxbios fixes)
 			    shalma (Various core fixes)
-			    Tibério Vítor (Brazilian Portuguese Translation)
 			    Tristin Celestin (PulseAudio support)
+
+PCSX-Reloaded Translators: Giovanni Scafora (Italian)
+			   Tibério Vítor (Brazilian Portuguese)
+			   Wei Mingzhi (Simplified & Traditional Chinese)
